crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__tricky_unicode_symbols_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/tricky_unicode_symbols.py
---
## Input


```py
ä = 1
µ = 2
蟒 = 3
x󠄀 = 4
មុ = 1
Q̇_per_meter = 4

A᧚ = 3
A፩ = 8

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -6,5 +6,4 @@
 Q̇_per_meter = 4
 
 A᧚ = 3
-A፩ = 8
-
+A፩ = 8
\ No newline at end of file

```


## Ruff Output


```py
ä = 1
µ = 2
蟒 = 3
x󠄀 = 4
មុ = 1
Q̇_per_meter = 4

A᧚ = 3
A፩ = 8
```


## Black Output


```py
ä = 1
µ = 2
蟒 = 3
x󠄀 = 4
មុ = 1
Q̇_per_meter = 4

A᧚ = 3
A፩ = 8


```



