crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__tupleassign_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/tupleassign.py
---
## Input


```py
# This is a standalone comment.
sdfjklsdfsjldkflkjsf, sdfjsdfjlksdljkfsdlkf, sdfsdjfklsdfjlksdljkf, sdsfsdfjskdflsfsdf = 1, 2, 3

# This is as well.
this_will_be_wrapped_in_parens, = struct.unpack(b"12345678901234567890")

(a,) = call()

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -3,11 +3,10 @@
     sdfjklsdfsjldkflkjsf,
     sdfjsdfjlksdljkfsdlkf,
     sdfsdjfklsdfjlksdljkf,
-    sdsfsdfjskdflsfsdf,
-) = (1, 2, 3)
+    sdsfsdfjskdflsfsdf
+) = 1, 2, 3
 
 # This is as well.
 (this_will_be_wrapped_in_parens,) = struct.unpack(b"12345678901234567890")
 
-(a,) = call()
-
+(a,) = call()
\ No newline at end of file

```


## Ruff Output


```py
# This is a standalone comment.
(
    sdfjklsdfsjldkflkjsf,
    sdfjsdfjlksdljkfsdlkf,
    sdfsdjfklsdfjlksdljkf,
    sdsfsdfjskdflsfsdf
) = 1, 2, 3

# This is as well.
(this_will_be_wrapped_in_parens,) = struct.unpack(b"12345678901234567890")

(a,) = call()
```


## Black Output


```py
# This is a standalone comment.
(
    sdfjklsdfsjldkflkjsf,
    sdfjsdfjlksdljkfsdlkf,
    sdfsdjfklsdfjlksdljkf,
    sdsfsdfjskdflsfsdf,
) = (1, 2, 3)

# This is as well.
(this_will_be_wrapped_in_parens,) = struct.unpack(b"12345678901234567890")

(a,) = call()


```



