crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__whitespace_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/whitespace.py
---
## Input


```py


```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -1,3 +0,0 @@
-
-
-

```


## Ruff Output


```py

```


## Black Output


```py




```



